<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FLIR ONE</string>
    <string name="change_view">Change View \u21EA</string>
    <string name="change_view_retract">Change View \u21B2</string>
    <string name="connectSim">Toggle Sim</string>
    <string name="performTuning">Tune</string>
    <string name="rotate_on">\u21BA</string>
    <string name="rotate_off">\u21BB</string>
    <string name="battery_label">Batt:</string>
    <string name="txtTuning">Tuning...</string>
    <string name="startNetStream">Stream</string>
    <string name="stopNetStream">Disconnect</string>

    <!-- \u21EA  \u21B2  滤镜的两个图标-->
    <string name="app_name_cn">FLIR ONE热成像仪</string>
    <string name="change_view_cn">滤镜\n(已使用默认滤镜)</string>
    <string name="change_view_retract_cn">滤镜\n(已使用默认滤镜)</string>
    <string name="connectSim_cn">FLIR设备已连接</string>
    <string name="performTuning_cn">校准</string>
    <string name="rotate_on_cn">\u21BA</string>
    <string name="rotate_off_cn">\u21BB</string>
    <string name="battery_label_cn">电池:</string>
    <string name="txtTuning_cn">加载中...</string>
    <string name="startNetStream_cn">连接Socket</string>
    <string name="stopNetStream_cn">断开Socket</string>
    <string name="openWarn">打开高温警告\n已关闭</string>
    <string name="closeWarn">关闭高温警告\n已开启</string>

    <string name="Please_Connect_FLIR_One">请连接一个FLIR One设备</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="load">加载中...</string>
    <string name="no_photo">抱歉，没有发现图片</string>
    <string name="start">图片浏览器(单击刷新图片库)</string>
</resources>
