<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:touchscreenBlocksFocus="false"
    tools:context=".PreviewActivity">


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scaleType="fitCenter" />

    <FrameLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls_top"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/batteryLabelTextView"
                style="?actionMenuTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:text="@string/battery_label_cn"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/batteryChargeIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="0"
                android:src="@android:drawable/ic_lock_idle_charging"
                android:tint="@color/accent_material_light"
                android:visibility="gone" />

            <TextView
                android:id="@+id/batteryLevelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="0.48"
                android:text="--"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ToggleButton
                android:id="@+id/chargeCableToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:checked="false"
                android:onClick="onSimulatedChargeCableToggleClicked"
                android:text="Cable"
                android:visibility="invisible" />

            <ToggleButton
                android:id="@+id/streamButton"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNetStreamClicked"
                android:textOff="@string/startNetStream_cn"
                android:textOn="@string/stopNetStream_cn" />

            <Button
                android:id="@+id/tuneButton"
                style="?metaButtonBarButtonStyle"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:onClick="onTuneClicked"
                android:text="@string/performTuning_cn" />

            <ToggleButton
                android:id="@+id/switch_rotate"
                style="?metaButtonBarButtonStyle"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="onRotateClicked"
                android:text="@string/rotate_on_cn"
                android:textOff="@string/rotate_off_cn"
                android:textOn="@string/rotate_on_cn" />


        </LinearLayout>

        <FrameLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:columnCount="3"
            android:rowCount="2"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/imageTypeListContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:baselineAligned="false"
                android:focusableInTouchMode="false"
                android:orientation="horizontal"
                android:visibility="gone">

                <ListView
                    android:id="@+id/paletteListView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="60dp"
                    android:alpha="0.9"
                    android:choiceMode="singleChoice"
                    android:clickable="true"
                    android:dividerHeight="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <GridView
                    android:id="@+id/paletteGridView"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:columnWidth="80dp"
                    android:numColumns="3"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="0.33"
                android:onClick="onCaptureImageClicked"
                android:src="@android:drawable/ic_menu_camera" />

            <ToggleButton
                android:id="@+id/change_view_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_weight="0.33"
                android:onClick="onChangeViewClicked"
                android:textOff="@string/change_view_cn"
                android:textOn="@string/change_view_retract_cn" />

            <Button
                android:id="@+id/connect_sim_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom|right"
                android:onClick="onConnectSimClicked"
                android:text="@string/connectSim_cn" />


        </FrameLayout>

        <ProgressBar
            android:id="@+id/tuningProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tuningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:labelFor="@id/tuningProgressBar"
            android:text="@string/txtTuning_cn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/pleaseConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:text="@string/Please_Connect_FLIR_One"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />


    </FrameLayout>

    <ImageView
        android:id="@+id/spotMeterIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.9"
        android:src="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/spotMeterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.9"
        android:paddingTop="39dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</FrameLayout>
